// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvBreadcrumbsSpaces should render with attributes 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      href="/public/apps/dashboard"
      target="newBody"
    >
      Home
    </a>
  </li>
  <li
    className="breadcrumb-item"
  >
    <a
      href="/public/apps/spaces/#/1"
    >
      a
    </a>
  </li>
  <li
    className="breadcrumb-item active"
  >
    b
  </li>
</ul>
`;

exports[`AvBreadcrumbsSpaces should render with with no name 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      href="/public/apps/dashboard"
      target="newBody"
    >
      Home
    </a>
  </li>
  <li
    className="breadcrumb-item"
  >
    <span>
      ···
    </span>
  </li>
  <li
    className="breadcrumb-item active"
  >
    b
  </li>
</ul>
`;
